feat: [phase 6] implement qna api and test
